# job-hop

./: .gitignore  job-hop.code-workspace
job-hop-backend/: .editorconfig  .env.example  Makefile  PLAN_OF_ATTACK.md  README.md  database.py  main.py  pyproject.toml  requirements.txt
job-hop-backend/src/: config.py  database.py  store.py
job-hop-backend/src/models/: job.py  profile.py  resume.py
job-hop-backend/src/routes/: health.py  jobs.py  profile.py  resume.py
job-hop-backend/src/scripts/: migrate.py
job-hop-backend/src/services/: fetch_job.py
job-hop-chrome/: index.html  manifest.json  package-lock.json  package.json  popup.ts  tsconfig.json  vite.config.ts
job-hop-chrome/src/: JobForm.tsx  LoginForm.tsx  index.tsx  popup.css  popup.tsx  supabaseClient.ts
job-hop-docs/: Flows.md  Flows.mermaid  Prompts.md
job-hop-extension/: index.html  manifest.json  package-lock.json  package.json
job-hop-extension/src/: AuthProvider.tsx  JobForm.tsx  LoginForm.tsx  index.tsx  popup.css  popup.tsx  supabaseClient.ts
job-hop-infra/: docker-compose.yaml
job-hop-mobile/: app.json  package-lock.json  package.json
job-hop-mobile/app/: _layout.tsx  login.tsx  register.tsx
job-hop-mobile/context/: AuthContext.tsx
job-hop-mobile/utils/: supabase.ts
job-hop-requests/: IndeedJob.http  indeed-job.json  resume.http
job-hop-safari/job-hop-safari Extension/: SafariWebExtensionHandler.swift
job-hop-web/: README.md  index.html  package-lock.json  package.json
job-hop-web2/: .editorconfig  package-lock.json  package.json
prompts/: InitialResearch.md
(+84 files in other folders)
